--- a/src/newtab/style.css
+++ b/src/newtab/style.css
@@ -45,7 +45,6 @@
   .left{
     height: 100%;
     width: 30%;
-    background-color: black;
   }
   .inmiddle{
     height: 100%;
@@ -58,7 +57,7 @@
   }
   .up{
     width: 100%;
-    height: 70%;
+    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -68,10 +67,21 @@
     font-size: 20px;
     line-height: 50px;
   }
+  .button{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:space-evenly;
+  }
   .down{
     width: 100%;
     height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+
   .right{
     height: 100%;
     width: 30%;
@@ -82,8 +92,7 @@
     background-color: beige;
   }
   .sreach{
-    height: 6%;
-    width: 80%;
+    width: 90%;
     border-radius: 10cqb;
-    text-indent:10px
+    margin-bottom: 10%;
   }
